# verify-kit

./: .gitignore  .licenserc.yaml  .markdownlint.json  .markdownlintignore  .mise.toml  .pre-commit-config.yaml  .slopcheck  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SESSION-HANDOFF.md  copier.yml  lychee.toml  pyproject.toml  release-please-config.json
.beads/: metadata.json
.claude/: settings.json
.claude/hooks/: convergence-stall-detector.sh  retro-reminder.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: actionlint.yml  codeql.yml  coverage.yml  dependabot-automerge.yml  docstring-coverage.yml  license-check.yml  link-check.yml  markdownlint.yml  perf-regression.yml  pip-audit.yml  preset-schema-check.yml  release-please.yml  sbom-sign.yml  scorecard.yml  stale.yml  template-selftest-live.yml  template-selftest-macos.yml  template-selftest.yml  typecheck-matrix.yml  typecheck.yml
.planning/: REQUIREMENTS.md  REVIEW-CHECKLIST.md  ROADMAP.md  STATE.md
.planning/learnings/: DRIFT-PREVENTION.md  PHASE-07-RETRO.md
.planning/scripts/: act-validate-selftest.sh  check-plan-shapes.sh
docs/casts/: record-cast.sh
presets/: README.md  oss-minimalist.yml  personal.yml
research/: 00-architecture-overview.md  00-autonomous-workflow.md  00-decision-log.md  00-stack-decisions.md  README.md
research/agent-reports/: wave-1-audio-testing.md  wave-1-game-testing.md  wave-1-general-verification-harnesses.md  wave-1-llm-eval-frameworks.md  wave-2-ci-portability.md  wave-2-llm-hosting.md  wave-2-polyglot-orchestration.md  wave-2-scaffolding-tools.md  wave-3-ease-of-use.md  wave-3-human-friendly-logging.md  wave-3-opentelemetry-local.md  wave-3-vscode-ide.md  wave-4-ai-sdk-ergonomics.md  wave-4-fastapi-ecosystem.md  wave-4-mcp-agent-integration.md  wave-4-nextjs-react.md  wave-5-claude-codex-mechanics.md  wave-5-coordination-primitives.md  wave-5-gsd-autonomous.md  wave-5-multi-agent-case-studies.md  wave-6-drift-prevention-strategies.md  wave-6-shared-context-mechanisms.md
research/learnings/: README.md  accepted-risk-must-match-distribution-intent.md  convergence-oscillation-restructure-trigger.md  cost-double-tokenization-pattern.md  each-gate-catches-different-classes-of-bug.md  heavy-verify-belongs-in-verify-work-not-execute-plan.md  internal-checker-vs-external-reviewer.md  keyword-checks-are-not-comprehensibility-checks.md  manual-fix-meta-bug-cascade.md  state-md-vs-roadmap-checkbox-confusion.md  sub-agent-false-claims-must-be-grounded.md  transitive-dep-conflicts-only-uv-sync-catches.md
research/scripts/: README.md  audit-obsidian.py
research/synthesis/: session-2026-05-18-phase-1-and-2-buildout.md  session-2026-05-22-phase-5-llm-and-verification.md
research/tools/: agent-browser.md  autoevals.md  claude-squad.md  copier.md  fastapi-mcp.md  instructor.md  jaeger.md  just.md  langfuse.md  litellm.md  mise.md  openllmetry.md  promptfoo.md  pydantic-ai.md  vcrpy.md
scripts/: check_preset_pii.sh
src/verify_kit/: __init__.py
template/: .editorconfig.jinja2  .gitattributes.jinja2  .gitignore.jinja2  .mise.toml.jinja2  .pre-commit-config.yaml.jinja2  AGENTS.md.jinja2  LICENSE.jinja2  Makefile.jinja2  README.md.jinja2  justfile.jinja2  pyproject.toml.jinja2  {% if has_backend %}.dockerignore{% endif %}  {% if has_backend %}.env.example{% endif %}.jinja2  {% if has_backend %}Dockerfile{% endif %}.jinja2  {% if has_backend %}docker-compose.yml{% endif %}.jinja2  {% if has_claude_code %}CLAUDE.md{% endif %}.jinja2  {% if has_db %}alembic.ini{% endif %}.jinja2  {% if has_llm %}docker-compose.langfuse.yml{% endif %}.jinja2  {% if has_llm and not has_backend %}.env.example{% endif %}.jinja2
template/.github/: {% if has_copilot %}copilot-instructions.md{% endif %}.jinja2
template/harness/: __init__.py.jinja2  cache.py.jinja2  cli.py.jinja2  config.py.jinja2  core.py.jinja2  debug_endpoints.py.jinja2  didyoumean.py.jinja2  fix.py.jinja2  jaeger.py.jinja2  logging.py.jinja2  models.py.jinja2  observability.py.jinja2  proc.py.jinja2  ralph.py.jinja2  registry.py.jinja2  runner.py.jinja2  trace_id.py.jinja2  {% if has_llm %}llm.py{% endif %}.jinja2
template/scripts/: ralph.sh.jinja2
template/tests/: conftest.py.jinja2  {% if has_backend %}test_verify_umbrella_includes_backend.py{% endif %}.jinja2
template/{% if has_backend %}app{% endif %}/: .env.example.jinja2  __init__.py.jinja2  api.py.jinja2  auth.py.jinja2  cli.py.jinja2  main.py.jinja2  models.py.jinja2  services.py.jinja2  settings.py.jinja2  {% if has_db %}db.py{% endif %}.jinja2  {% if has_db %}schema.py{% endif %}.jinja2
template/{% if has_claude_code %}.claude{% endif %}/: settings.json.example.jinja2
template/{% if has_cursor %}.cursor{% endif %}/: mcp.json.jinja2
template/{% if has_web %}web{% endif %}/: .gitignore  (+12 more)
template_extensions/: __init__.py  env_detect.py
tests/: _helpers.py  conftest.py  test_09_03_lostpixel_freshness.py  test_09_03_require_and_run_id.py  test_09_04_jaeger_tag_polling.py  test_09_04_otel_forceflush.py  test_09_04_web_otel_trace.py  test_09_review_lost_pixel_required_path.py  test_agent_skills.py  test_agents_fresh.py  test_arch_imports.py  test_backend_docker_probe_timeout.py  test_beartype_hook.py  test_ci_and_agents.py  test_claude_hooks.py  test_copier_render.py  test_deploy_config.py  test_deploy_image_boots.py  test_deps_unused.py  test_dev_conventions.py  test_eval_golden_regression.py  test_fixloop.py  test_logfire_opt_in.py  test_mcp_cli_byte_identical.py  test_mcp_roster_honesty.py  test_mcp_server.py  test_mcp_smoke_endtoend.py  test_meta_stability.py  test_no_dead_after_return.py  test_p3_review_checklist.py  test_p3_template_smoke.py  test_per_agent_rules.py  test_phase03_fastmcp3_compat.py  test_phase04_docker_compose.py  test_phase04_integration.py  test_phase04_optin_polarity.py  test_phase04_scaffold_polarity.py  test_phase05_polarity.py  test_phase06_auth_polarity.py  test_phase06_backend_docker_preflight.py  (+38 more)
(+186 files in other folders)
