[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "verify-kit"
version = "0.1.0a0"
description = "Reusable Copier-based scaffold template with self-verifiable agentic-coding harness"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "m2moiz", email = "m.moiz1995@gmail.com" }]
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "copier>=9.4",
    "copier-templates-extensions>=0.3.2",
    "pytest>=8",
    "pyyaml",
    # structlog is a runtime dep of rendered scratch harness modules; tests
    # sys.path-insert those modules into the dev venv, so the dep must be
    # importable here too. (Plan 02-03)
    "structlog>=25",
    # Plan 02-05 reports/pretty.py + Plan 02-06 jaeger.py rely on rich.
    # tests sys.path-insert those modules into the dev venv, so the dep must
    # be importable here too.
    "rich>=13",
    # Plan 02-06 jaeger.py uses httpx for the Jaeger HTTP API.
    "httpx>=0.27",
    # Plan 02-06 CLI uses typer; tests sys.path-insert the CLI module.
    "typer>=0.12",
    # Plan 03-01 T07 tests drive the MCP server through fastmcp.Client.
    "fastmcp>=2.0,<4.0",
    "coverage>=7",
    "pytest-cov>=5",
]

[tool.hatch.build.targets.wheel]
# template_extensions ships the Copier Jinja extensions (env_detect, etc.)
# that run at scaffold time. src/verify_kit is the future verify-kit Python package.
packages = ["template_extensions"]

[tool.hatch.build.targets.sdist]
include = [
    "copier.yml",
    "template/**",
    "README.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"'); requires RUN_SLOW_TESTS=1",
    "requires_network: test requires network access (e.g. PyPI fetch on first install)",
]

[tool.interrogate]
# Docstring coverage gate. Directional signal, not a perfection target.
# Per bead verify-kit-3dm: start at a threshold that current code already
# clears, ratchet up as the package grows. src/verify_kit is at 100% with
# its single module docstring; 80% gives one missing docstring of grace
# room before failing — enough to catch regressions but not so tight that
# adding a new module forces an immediate doc-writing detour.
fail-under = 80
verbose = 1
# Scope: only the shipped package. The template/ tree is Jinja-rendered
# and tests/ is verification code — neither needs docstring coverage.
ignore-init-method = true
ignore-init-module = false
ignore-magic = true
ignore-private = false
ignore-property-decorators = false
ignore-semiprivate = false
ignore-setters = true
ignore-nested-functions = true
ignore-nested-classes = false
ignore-module = false

[tool.coverage.run]
# Directional coverage signal (per bead a9u: "do not enforce a threshold —
# too easy to game with unit tests of trivial code"). Scope mirrors the
# pyright/interrogate scopes: cover the shipped surfaces, not the template/
# Jinja tree or planning artifacts.
source = ["src", "template_extensions"]
branch = true

[tool.coverage.report]
# Hide trivially-uncovered patterns that aren't real gaps.
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
]
show_missing = true
skip_covered = false

[tool.pyright]
# Type-check the cleanly-typed surfaces. Tests are deliberately out of
# scope on first introduction (sys.path-insert against template/ files
# produces 59 spurious errors); they'll be folded in by a follow-up bead
# after the test surface gets a proper package layout.
include = ["src", "template_extensions"]
exclude = [
    "**/__pycache__",
    ".venv",
    ".planning",
    "template",
    "tests",
]
pythonVersion = "3.13"
# Start in 'basic' mode per bead verify-kit-hby mitigation: introduce
# warnings-only first, ratchet to strict over follow-up phases. Current
# baseline on the in-scope surfaces: 0 errors.
typeCheckingMode = "basic"
reportMissingImports = "error"
reportMissingTypeStubs = "warning"
